
Changes in Version 0.9-11

  o latticist uses hexbinplot, and many other changes.

  o playwith() now returns the playState object, not the plot result.

  o revised and expanded all examples in help("playwith").

  o improved local cacheing of objects appearing in the plot call.
    now stores local functions as well as objects, and works better.

  o re-used playwith windows are resized to account for toolbars etc.

  o grob inspector tool allows removing grobs (but note bug in 'grid').

Changes in Version 0.9-10

  o grob inspector tool (currently only shows str() of grobs).

  o moved marginals() and c.trellis() into latticeExtra package.

  o plot settings dialog now does not fail for lattice plots
    where scales="free".

  o lattice theme selector now includes an option for custom.theme()
    from latticeExtra.

Changes in Version 0.9-9

  o fix bug when tooltips are turned on: this runs the GTK Main Loop,
    and sometimes when the window was closed it was not stopped,
    freezing the R terminal.

  o fix bug in parameter slider ("Invalid property value").

  o make sliders and scrollbars update continuously (but constrained
    by plot redrawing), rather than only on mouse button release.

Changes in Version 0.9-8

  o compatability with older versions of RGtk2.

  o draw x scales in marginals().

Changes in Version 0.9-7

  o click on plot makes a pop-up menu with labels for nearby points.
    Select one to add that label to the plot.

  o clicks on plot avoid looking up data points unless neccessary.

  o reorder factor levels only once in latticist(), which removes
    lots of ugly reorderByFreq() from the plot calls.

  o latticist preloads some useful variable expressions and subsets.

  o latticist converts integers with only 1 or 2 levels to factor.

  o use shingle levels for labels in strips and on axes.

  o latticist gives more error messages in dialog boxes.

  o latticist passes labels argument to playwith(), which stops it