@@ -2,11 +2,11 @@ Package: playwith
 Type: Package
 Title: A GUI for interactive plots using GTK+
 Version: 0.9-11
-Date: 2008-08-05
+Date: 2008-08-06
 Author: Felix Andrews <felix@nfrac.org>
 Maintainer: Felix Andrews <felix@nfrac.org>
-Depends: R (>= 2.5.0), lattice (>= 0.16-3), latticeExtra (>= 0.5-1), gWidgets, gWidgetsRGtk2, cairoDevice
-Imports: RGtk2 (>= 2.10.11), grid, gridBase, grDevices, graphics, utils
+Depends: R (>= 2.5.0), lattice (>= 0.16-3), latticeExtra (>= 0.5-1), grid, gWidgets, gWidgetsRGtk2, cairoDevice
+Imports: RGtk2 (>= 2.10.11), gridBase, grDevices, graphics, utils
 Suggests: hexbin, zoo
 Description: A GTK+ graphical user interface for viewing and interacting with R plots.
   It tries to work out the structure of a plot, in order to interact with it.
